2008-11-26  Glenn Morris  <rgm@gnu.org>

	* xfaces.c (Fx_font_family_list): Replace lisp/term/pc-win.el
	redefinition with ifdef.  (Bug#1383)

2008-11-24  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsterm.m (ns_get_color): Handle long hex strings (fixes bug #1044).

2008-11-24  Wolfgang Lux <wolfgang.lux@gmail.com> (tiny change)

	* nsterm.m (-otherMouseDown:, -otherMouseUp:, -otherMouseDragged):
	New EmacsView methods.
	(EV_UDMODIFIERS, EV_BUTTON): Add OtherMouse constants.
	Fixes bug #1048,1357,1414.

2008-11-24  Adrian Robert  <Adrian.B.Robert@gmail.com>

	Fix bug #1362.
	* image.c (x_clear_image_1): Do not free background under HAVE_NS, it
	is not an indexed color.
	* nsterm.m (free_indexed_color): Add argument checking.
	* nsfns.m: Move config.h to before system includes (advised by Dan N.).

2008-11-24  Chong Yidong  <cyd@stupidchicken.com>

	* minibuf.c (Fcompleting_read, Vminibuffer_completion_confirm):
	Document confirm-after-completion value for
	minibuffer-completion-confirm.

2008-11-24  Jason Rumney  <jasonr@gnu.org>

	* w32font.c (check_face_name): Use xstrcasecmp.  Avoid compiler
	warning.

2008-11-23  Jason Rumney  <jasonr@gnu.org>

	* w32uniscribe.c (uniscribe_encode_char): Ensure context is
	restored before returning.

	* w32font.c (check_face_name): New function.
	(add_font_entity_to_list): Use it to filter out common substituted
	fonts.

2008-11-22  Martin Rudalics  <rudalics@gmx.at>

	* buffer.c (Fswitch_to_buffer): Reword and mention new option
	confirm-nonexistent-file-or-buffer in doc-string.

2008-11-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* buffer.c (Fbuffer_swap_text): Remove redundant marker manipulation.
	Fix copy/paste typo.  Add checks.

2008-11-21  Kenichi Handa  <handa@m17n.org>

	* coding.c (detect_coding_iso_2022): Reject invalid composition
	sequence.
	(DECODE_COMPOSITION_START): If the current source is the last
	block, and the current composition doesn't end, regard this
	sequence as invalid.